--- a/låda1.html
+++ b/låda1.html
@@ -1,12 +1,17 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>låda1</title>
+        <title></title>
         <link rel="stylesheet" href="style.css">
         <script src="script.js"></script>
     </head>
     <body>
-        <h1>Innehåll</h1>
-        <a href="index.html">index</a><br>
+        <h1></h1>
+        <a href="index.html"></a><br>
+
+        2 Tomtar
+        3 Möss
+        75 Julgranskulor
+        1 Julgransmatta
     </body>
 </html>
