--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     </head>
     <body>
         <h1></h1>
-        <a href="index.html"></a><br>
+        <a href="låda1.html">Låda 1</a><br>
+        <a href=""></a><br>
+        <a href=""></a><br>
+        <a href=""></a><br>
+        <a href=""></a><br>
     </body>
 </html>
 
