--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <h1></h1>
-        <a href="låda1.html">Låda 1</a><br>
+        <a href="box1.html">Låda 1</a><br>
         <a href=""></a><br>
         <a href=""></a><br>
         <a href=""></a><br>
