--- a/bas.html
+++ b/bas.html
@@ -6,9 +6,9 @@
         <script src="script.js"></script>
     </head>
     <body>
-        <h1></h1>
-        <a href="index.html"></a><br>
+        <h1>Låda X</h1>
+        <ul></ul>
+            <li>XXX</li>
+        </ul>
     </body>
 </html>
-
-https://htmlpreview.github.io/
