--- a/box1.html
+++ b/box1.html
@@ -6,12 +6,12 @@
         <script src="script.js"></script>
     </head>
     <body>
-        <h1></h1>
-        <a href="index.html"></a><br>
-
-        2 Tomtar
-        3 Möss
-        75 Julgranskulor
-        1 Julgransmatta
+        <h1>Låda 1</h1>
+        <ul></ul>
+            <li>2 Tomtar</li>
+            <li>3 Möss</li>
+            <li>75 Julgranskulor</li>
+            <li>1 Julgransmatta</li>
+        </ul>
     </body>
 </html>
