--- a/index.html
+++ b/index.html
@@ -6,12 +6,11 @@
         <script src="script.js"></script>
     </head>
     <body>
-        <h1></h1>
         <a href="box1.html">Låda 1</a><br>
-        <a href=""></a><br>
-        <a href=""></a><br>
-        <a href=""></a><br>
-        <a href=""></a><br>
+        <a href="box2.html">Låda 2</a><br>
+        <a href="box3.html">Låda 3</a><br>
+        <a href="box4.html">Låda 4</a><br>
+        <a href="box5.html">Låda 5</a><br>
     </body>
 </html>
 
