--- a/bas.html
+++ b/bas.html
@@ -10,5 +10,8 @@
         <ul></ul>
             <li>XXX</li>
         </ul>
+
+        <br>
+        <a href="index.html">Tillbaka till lådor</a><br>
     </body>
 </html>
