--- a/box1.html
+++ b/box1.html
@@ -13,5 +13,8 @@
             <li>75 Julgranskulor</li>
             <li>1 Julgransmatta</li>
         </ul>
+        
+        <br>
+        <a href="index.html">Tillbaka till lådor</a><br>
     </body>
 </html>
