--- a/index.html
+++ b/index.html
@@ -4,14 +4,17 @@
         <title></title>
         <link rel="stylesheet" href="style.css">
         <script src="script.js"></script>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
     </head>
     <body>
-        <a href="box1.html">Låda 1</a><br>
-        <a href="box2.html">Låda 2</a><br>
-        <a href="box3.html">Låda 3</a><br>
-        <a href="box4.html">Låda 4</a><br>
-        <a href="box5.html">Låda 5</a><br>
+        <h1>Förrådsinnehåll</h1>
+        <div class="container"></div>
+            <a href="box1.html">Låda 1</a><br>
+            <a href="box2.html">Låda 2</a><br>
+            <a href="box3.html">Låda 3</a><br>
+            <a href="box4.html">Låda 4</a><br>
+            <a href="box5.html">Låda 5</a><br>
+        </div>
     </body>
 </html>
-
-https://htmlpreview.github.io/
