--- a/bas.html
+++ b/bas.html
@@ -4,6 +4,8 @@
         <title></title>
         <link rel="stylesheet" href="style.css">
         <script src="script.js"></script>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
     </head>
     <body>
         <h1>Låda X</h1>
