--- a/box1.html
+++ b/box1.html
@@ -4,6 +4,8 @@
         <title></title>
         <link rel="stylesheet" href="style.css">
         <script src="script.js"></script>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
     </head>
     <body>
         <h1>Låda 1</h1>
@@ -13,7 +15,7 @@
             <li>75 Julgranskulor</li>
             <li>1 Julgransmatta</li>
         </ul>
-        
+
         <br>
         <a href="index.html">Tillbaka till lådor</a><br>
     </body>
